--- a/05-Memory/03-ConversationTokenBufferMemory.ipynb
+++ b/05-Memory/03-ConversationTokenBufferMemory.ipynb
@@ -11,9 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T13:41:32.433609500Z",
+     "start_time": "2024-10-03T13:41:32.417469300Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -21,6 +35,37 @@
     "# API KEY 정보로드\n",
     "load_dotenv()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH05-Memory\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
+    "# !pip install langchain-teddynote\n",
+    "from langchain_teddynote import logging\n",
+    "from langchain_teddynote.messages import stream_response\n",
+    "\n",
+    "# 프로젝트 이름을 입력합니다.\n",
+    "logging.langsmith(\"CH05-Memory\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-03T13:41:32.767798100Z",
+     "start_time": "2024-10-03T13:41:32.757622400Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -31,8 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T13:41:34.713021600Z",
+     "start_time": "2024-10-03T13:41:34.356296Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain.memory import ConversationTokenBufferMemory\n",
@@ -40,10 +90,10 @@
     "\n",
     "\n",
     "# LLM 모델 생성\n",
-    "llm = ChatOpenAI(model_name=\"gpt-4o\")\n",
+    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\")\n",
     "\n",
     "# 메모리 설정\n",
-    "memory = ConversationTokenBufferMemory(\n",
+    "memory = ConversationTokenBufferMemory( # 토큰의 개수를 계산하기 위해 llm을 입력 받음\n",
     "    llm=llm, max_token_limit=150, return_messages=True  # 최대 토큰 길이를 50개로 제한\n",
     ")"
    ]
@@ -57,8 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T13:41:35.726176Z",
+     "start_time": "2024-10-03T13:41:35.710521100Z"
+    }
+   },
    "outputs": [],
    "source": [
     "memory.save_context(\n",
@@ -110,13 +165,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T13:41:38.893286600Z",
+     "start_time": "2024-10-03T13:41:38.877440100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[HumanMessage(content='감사합니다, 도움이 많이 되었어요!'),\n AIMessage(content='언제든지 도와드릴 준비가 되어 있습니다. 추가적인 질문이나 지원이 필요하시면 언제든지 문의해 주세요. 좋은 하루 되세요!')]"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 대화내용을 확인합니다.\n",
     "memory.load_memory_variables({})[\"history\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
