--- a/05-Memory/04-ConversationEntityMemory.ipynb
+++ b/05-Memory/04-ConversationEntityMemory.ipynb
@@ -13,9 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T14:13:28.665957700Z",
+     "start_time": "2024-10-03T14:13:28.646548100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -26,8 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T14:13:29.841584900Z",
+     "start_time": "2024-10-03T14:13:28.665957700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
@@ -35,6 +54,37 @@
     "from langchain.memory import ConversationEntityMemory\n",
     "from langchain.memory.prompt import ENTITY_MEMORY_CONVERSATION_TEMPLATE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH05-Memory\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
+    "# !pip install langchain-teddynote\n",
+    "from langchain_teddynote import logging\n",
+    "from langchain_teddynote.messages import stream_response\n",
+    "\n",
+    "# 프로젝트 이름을 입력합니다.\n",
+    "logging.langsmith(\"CH05-Memory\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-03T14:13:54.170999200Z",
+     "start_time": "2024-10-03T14:13:54.165114600Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -45,9 +95,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T14:13:56.329947900Z",
+     "start_time": "2024-10-03T14:13:56.310802600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an assistant to a human, powered by a large language model trained by OpenAI.\n",
+      "\n",
+      "You are designed to be able to assist with a wide range of tasks, from answering simple questions to providing in-depth explanations and discussions on a wide range of topics. As a language model, you are able to generate human-like text based on the input you receive, allowing you to engage in natural-sounding conversations and provide responses that are coherent and relevant to the topic at hand.\n",
+      "\n",
+      "You are constantly learning and improving, and your capabilities are constantly evolving. You are able to process and understand large amounts of text, and can use this knowledge to provide accurate and informative responses to a wide range of questions. You have access to some personalized information provided by the human in the Context section below. Additionally, you are able to generate your own text based on the input you receive, allowing you to engage in discussions and provide explanations and descriptions on a wide range of topics.\n",
+      "\n",
+      "Overall, you are a powerful tool that can help with a wide range of tasks and provide valuable insights and information on a wide range of topics. Whether the human needs help with a specific question or just wants to have a conversation about a particular topic, you are here to assist.\n",
+      "\n",
+      "Context:\n",
+      "{entities}\n",
+      "\n",
+      "Current conversation:\n",
+      "{history}\n",
+      "Last line:\n",
+      "Human: {input}\n",
+      "You:\n"
+     ]
+    }
+   ],
    "source": [
     "# Entity Memory를 사용하는 프롬프트 내용을 출력합니다.\n",
     "print(ENTITY_MEMORY_CONVERSATION_TEMPLATE.template)"
@@ -55,12 +133,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T14:14:02.683056900Z",
+     "start_time": "2024-10-03T14:14:02.115152300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dukim\\AppData\\Local\\Temp\\ipykernel_3128\\1337193518.py:5: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html instead.\n",
+      "  conversation = ConversationChain(\n"
+     ]
+    }
+   ],
    "source": [
     "# LLM 을 생성합니다.\n",
-    "llm = ChatOpenAI(model_name=\"gpt-4o\", temperature=0)\n",
+    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n",
     "\n",
     "# ConversationChain 을 생성합니다.\n",
     "conversation = ConversationChain(\n",
@@ -81,9 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T14:14:12.872588900Z",
+     "start_time": "2024-10-03T14:14:06.297247600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'테디와 셜리가 한 회사에서 일하는 동료이고, 테디는 개발자이고 셜리는 디자이너라는 정보를 알려주셨군요. 그들이 회사를 차릴 계획을 세우고 있다는 것은 미래에 두 사람이 협력하여 새로운 사업을 시작하려는 의지가 있는 것으로 보입니다. 이는 두 사람이 서로의 강점을 살려 협력하여 성공적인 사업을 이끌어 나갈 수 있는 좋은 기회가 될 것입니다. 새로운 도전에 대한 열정과 노력이 있으면 두 사람이 함께 성공을 거두리라고 믿습니다.'"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conversation.predict(\n",
     "    input=\"테디와 셜리는 한 회사에서 일하는 동료입니다.\"\n",
@@ -101,13 +207,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T14:14:18.041033200Z",
+     "start_time": "2024-10-03T14:14:18.020988400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'테디': '테디는 개발자이고, 셜리와 함께 자신들의 회사를 차릴 계획을 세우고 있습니다.',\n '셜리': '셜리는 한 회사에서 디자이너로 일하고 있으며, 테디와 함께 자신들의 회사를 차릴 계획을 세우고 있다.'}"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# entity memory 를 출력합니다.\n",
     "conversation.memory.entity_store.store"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'테디와 셜리는 한 회사에서 일하는 동료이고, 테디는 개발자이고 셜리는 디자이너입니다. 두 사람은 현재 자신들의 회사를 차릴 계획을 세우고 있습니다. 이는 두 사람이 서로의 강점을 살려 협력하여 성공적인 사업을 이끌어 나갈 수 있는 좋은 기회가 될 것으로 보입니다. 새로운 도전에 대한 열정과 노력이 있으면 두 사람이 함께 성공을 거두리라고 믿습니다.'"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conversation.predict(input=\"테디와 설리의 관계에 대해 요약해줘.\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-03T14:22:11.496312600Z",
+     "start_time": "2024-10-03T14:22:05.761917700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
