--- a/05-Memory/01-ConversationBufferMemory.ipynb
+++ b/05-Memory/01-ConversationBufferMemory.ipynb
@@ -13,18 +13,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T01:43:47.769164300Z",
+     "start_time": "2024-10-02T01:43:46.935279900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain.memory import ConversationBufferMemory"
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## BaseChatMemory\n",
+    "* ConversationBufferMemory는 BaseChatMemory를 상속 받음"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T01:43:47.784246600Z",
+     "start_time": "2024-10-02T01:43:47.773692200Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ConversationBufferMemory()"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "memory = ConversationBufferMemory()\n",
     "memory"
@@ -32,8 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T04:57:36.913946500Z",
+     "start_time": "2024-10-02T04:57:36.909616900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "memory.save_context(\n",
@@ -48,9 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T04:57:37.515815600Z",
+     "start_time": "2024-10-02T04:57:37.506876Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ConversationBufferMemory(chat_memory=InMemoryChatMessageHistory(messages=[HumanMessage(content='안녕하세요, 비대면으로 은행 계좌를 개설하고 싶습니다. 어떻게 시작해야 하나요?'), AIMessage(content='안녕하세요! 계좌 개설을 원하신다니 기쁩니다. 먼저, 본인 인증을 위해 신분증을 준비해 주시겠어요?'), HumanMessage(content='안녕하세요, 비대면으로 은행 계좌를 개설하고 싶습니다. 어떻게 시작해야 하나요?'), AIMessage(content='안녕하세요! 계좌 개설을 원하신다니 기쁩니다. 먼저, 본인 인증을 위해 신분증을 준비해 주시겠어요?')]))"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "memory"
    ]
@@ -64,9 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T04:58:15.682167400Z",
+     "start_time": "2024-10-02T04:58:15.667380500Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human: 안녕하세요, 비대면으로 은행 계좌를 개설하고 싶습니다. 어떻게 시작해야 하나요?\n",
+      "AI: 안녕하세요! 계좌 개설을 원하신다니 기쁩니다. 먼저, 본인 인증을 위해 신분증을 준비해 주시겠어요?\n",
+      "Human: 안녕하세요, 비대면으로 은행 계좌를 개설하고 싶습니다. 어떻게 시작해야 하나요?\n",
+      "AI: 안녕하세요! 계좌 개설을 원하신다니 기쁩니다. 먼저, 본인 인증을 위해 신분증을 준비해 주시겠어요?\n"
+     ]
+    }
+   ],
    "source": [
     "# 'history' 키에 저장된 대화 기록을 확인합니다.\n",
     "print(memory.load_memory_variables({})[\"history\"])"
@@ -154,9 +218,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T04:59:46.055346Z",
+     "start_time": "2024-10-02T04:59:46.038484900Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human: 안녕하세요, 비대면으로 은행 계좌를 개설하고 싶습니다. 어떻게 시작해야 하나요?\n",
+      "AI: 안녕하세요! 계좌 개설을 원하신다니 기쁩니다. 먼저, 본인 인증을 위해 신분증을 준비해 주시겠어요?\n",
+      "Human: 안녕하세요, 비대면으로 은행 계좌를 개설하고 싶습니다. 어떻게 시작해야 하나요?\n",
+      "AI: 안녕하세요! 계좌 개설을 원하신다니 기쁩니다. 먼저, 본인 인증을 위해 신분증을 준비해 주시겠어요?\n"
+     ]
+    }
+   ],
    "source": [
     "# history에 저장된 대화 기록을 확인합니다.\n",
     "print(memory.load_memory_variables({})[\"history\"])"
@@ -171,8 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T04:59:55.830980300Z",
+     "start_time": "2024-10-02T04:59:55.815280400Z"
+    }
+   },
    "outputs": [],
    "source": [
     "memory = ConversationBufferMemory(return_messages=True)\n",
@@ -203,9 +288,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T05:00:11.286009800Z",
+     "start_time": "2024-10-02T05:00:11.279904Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[HumanMessage(content='안녕하세요, 비대면으로 은행 계좌를 개설하고 싶습니다. 어떻게 시작해야 하나요?'),\n AIMessage(content='안녕하세요! 계좌 개설을 원하신다니 기쁩니다. 먼저, 본인 인증을 위해 신분증을 준비해 주시겠어요?'),\n HumanMessage(content='네, 신분증을 준비했습니다. 이제 무엇을 해야 하나요?'),\n AIMessage(content='감사합니다. 신분증 앞뒤를 명확하게 촬영하여 업로드해 주세요. 이후 본인 인증 절차를 진행하겠습니다.'),\n HumanMessage(content='사진을 업로드했습니다. 본인 인증은 어떻게 진행되나요?'),\n AIMessage(content='업로드해 주신 사진을 확인했습니다. 이제 휴대폰을 통한 본인 인증을 진행해 주세요. 문자로 발송된 인증번호를 입력해 주시면 됩니다.')]"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# history에 저장된 대화 기록을 확인합니다.\n",
     "memory.load_memory_variables({})[\"history\"]"
@@ -213,9 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T05:13:19.719318Z",
+     "start_time": "2024-10-02T05:13:19.703586600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ChatPromptTemplate(input_variables=[], messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='당신은 친절한 AI 봇입니다')), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='대한민국의 수도는 어디야?'))])"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
@@ -236,9 +349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T05:13:20.852184500Z",
+     "start_time": "2024-10-02T05:13:20.831061600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -249,15 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T05:19:58.467463600Z",
+     "start_time": "2024-10-02T05:19:58.072994100Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "from langchain_core.runnables import RunnableWithMessageHistory\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.chains import ConversationChain\n",
     "\n",
     "# LLM 모델을 생성합니다.\n",
-    "llm = ChatOpenAI(temperature=0, model_name=\"gpt-4o\")\n",
+    "llm = ChatOpenAI(temperature=0, model_name=\"gpt-3.5-turbo\")\n",
     "\n",
     "# ConversationChain을 생성합니다.\n",
     "conversation = ConversationChain(\n",
@@ -276,9 +409,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T05:20:04.381754300Z",
+     "start_time": "2024-10-02T05:20:01.616193300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요! 은행 계좌를 개설하려면 먼저 해당 은행의 공식 웹사이트에 접속하셔야 합니다. 대부분의 은행은 온라인으로 계좌를 개설할 수 있는 서비스를 제공하고 있습니다. 웹사이트에 들어가셔서 개설 절차를 따라가시면 됩니다. 개인정보와 신분증 사본 등을 준비해두시면 좋습니다. 만약 도움이 필요하시다면 고객센터에 문의하시거나 온라인 상담을 이용하실 수도 있습니다. 혹시 어떤 은행을 이용하실 건가요?\n"
+     ]
+    }
+   ],
    "source": [
     "# 대화를 시작합니다.\n",
     "response = conversation.predict(\n",
@@ -296,9 +442,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T05:21:11.960345Z",
+     "start_time": "2024-10-02T05:21:10.114339900Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "은행 계좌를 개설하려면 해당 은행의 공식 웹사이트에 접속하여 온라인으로 개설하는 절차를 따라가면 됩니다. 개인정보와 신분증 사본을 준비해두세요. 도움이 필요하면 고객센터나 온라인 상담을 이용하세요.\n"
+     ]
+    }
+   ],
    "source": [
     "# 이전 대화내용을 불렛포인트로 정리해 달라는 요청을 보냅니다.\n",
     "response = conversation.predict(\n",
@@ -306,6 +465,15 @@
     ")\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
