3st comple, ch04, ch05

--- a/05-Memory/01-ConversationBufferMemory.ipynb
+++ b/05-Memory/01-ConversationBufferMemory.ipynb
@@ -16,12 +16,13 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T01:43:47.769164300Z",
-     "start_time": "2024-10-02T01:43:46.935279900Z"
+     "end_time": "2024-10-05T17:02:17.920077Z",
+     "start_time": "2024-10-05T17:02:17.139450100Z"
     }
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "from langchain.memory import ConversationBufferMemory"
    ]
   },
@@ -349,11 +350,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T05:13:20.852184500Z",
-     "start_time": "2024-10-02T05:13:20.831061600Z"
+     "end_time": "2024-10-05T17:04:14.938463500Z",
+     "start_time": "2024-10-05T17:04:14.926051Z"
     }
    },
    "outputs": [
@@ -361,7 +362,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,16 +377,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T05:19:58.467463600Z",
-     "start_time": "2024-10-02T05:19:58.072994100Z"
+     "end_time": "2024-10-05T17:08:23.011563400Z",
+     "start_time": "2024-10-05T17:08:22.612984800Z"
     }
    },
    "outputs": [],
    "source": [
-    "from langchain_core.runnables import RunnableWithMessageHistory\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.chains import ConversationChain\n",
     "\n",
@@ -409,11 +409,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T05:20:04.381754300Z",
-     "start_time": "2024-10-02T05:20:01.616193300Z"
+     "end_time": "2024-10-05T17:08:25.900645300Z",
+     "start_time": "2024-10-05T17:08:23.334119200Z"
     }
    },
    "outputs": [
@@ -421,7 +421,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "안녕하세요! 은행 계좌를 개설하려면 먼저 해당 은행의 공식 웹사이트에 접속하셔야 합니다. 대부분의 은행은 온라인으로 계좌를 개설할 수 있는 서비스를 제공하고 있습니다. 웹사이트에 들어가셔서 개설 절차를 따라가시면 됩니다. 개인정보와 신분증 사본 등을 준비해두시면 좋습니다. 만약 도움이 필요하시다면 고객센터에 문의하시거나 온라인 상담을 이용하실 수도 있습니다. 혹시 어떤 은행을 이용하실 건가요?\n"
+      "안녕하세요! 은행 계좌를 개설하려면 먼저 해당 은행의 공식 웹사이트에 접속하셔야 합니다. 거기서 온라인 계좌 개설 서비스를 찾아보시고 필요한 정보를 입력하시면 됩니다. 일반적으로 신분증, 주소증명서, 그리고 개설하려는 계좌에 대한 정보가 필요합니다. 개설 절차는 각 은행마다 조금씩 다를 수 있으니 해당 은행의 안내에 따라 진행하시면 됩니다. 도움이 필요하시면 언제든지 물어보세요!\n"
      ]
     }
    ],
