--- a/05-Memory/08-LCEL-add-memory.ipynb
+++ b/05-Memory/08-LCEL-add-memory.ipynb
@@ -12,11 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "75fd047c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:14:52.719456200Z",
+     "start_time": "2024-10-05T17:14:52.711857400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()"
@@ -24,9 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "43fca8db",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:14:54.349503100Z",
+     "start_time": "2024-10-05T17:14:53.908490700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from operator import itemgetter\n",
@@ -37,7 +57,10 @@
     "\n",
     "\n",
     "# ChatOpenAI 모델을 초기화합니다.\n",
-    "model = ChatOpenAI()\n",
+    "# model = ChatOpenAI()\n",
+    "from langserve import RemoteRunnable\n",
+    "\n",
+    "model = RemoteRunnable(f\"{os.getenv('LANGSERVE_ENDPOINT')}/llm-ko\")\n",
     "\n",
     "# 대화형 프롬프트를 생성합니다. 이 프롬프트는 시스템 메시지, 이전 대화 내역, 그리고 사용자 입력을 포함합니다.\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
@@ -61,9 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a7d6c97b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:15:02.319403600Z",
+     "start_time": "2024-10-05T17:15:02.311401100Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 대화 버퍼 메모리를 생성하고, 메시지 반환 기능을 활성화합니다.\n",
@@ -80,10 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "07317c49",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:15:03.459304700Z",
+     "start_time": "2024-10-05T17:15:03.452235200Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'chat_history': []}"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "memory.load_memory_variables({})  # 메모리 변수를 빈 딕셔너리로 초기화합니다."
    ]
@@ -98,42 +140,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ce20e13f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:15:04.836862300Z",
+     "start_time": "2024-10-05T17:15:04.832640700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "runnable = RunnablePassthrough.assign(\n",
-    "    chat_history=RunnableLambda(memory.load_memory_variables)\n",
-    "    | itemgetter(\"chat_history\")  # memory_key 와 동일하게 입력합니다.\n",
+    "    chat_history=RunnableLambda(memory.load_memory_variables) | itemgetter(\"chat_history\")  # memory_key 와 동일하게 입력합니다.\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ab75a2f7",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:15:05.624242400Z",
+     "start_time": "2024-10-05T17:15:05.605225100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'input': 'hi', 'chat_history': []}"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "runnable.invoke({\"input\": \"hi\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "dc636793",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:15:07.816996700Z",
+     "start_time": "2024-10-05T17:15:07.785472400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'input': 'hi', 'chat_history': []}"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "runnable.invoke({\"input\": \"hi\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "54745998",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:15:09.518779700Z",
+     "start_time": "2024-10-05T17:15:09.505984800Z"
+    }
+   },
    "outputs": [],
    "source": [
     "prompt = ChatPromptTemplate.from_messages(\n",
@@ -158,19 +237,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "b4ebf718",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:15:11.886851800Z",
+     "start_time": "2024-10-05T17:15:11.864424400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'input': 'hi!', 'chat_history': []}"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "runnable.invoke({\"input\": \"hi!\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "2ded5e90",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:15:12.616518900Z",
+     "start_time": "2024-10-05T17:15:12.608747400Z"
+    }
+   },
    "outputs": [],
    "source": [
     "chain = runnable | prompt | model"
@@ -186,10 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5c3f9232",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:18:53.174709600Z",
+     "start_time": "2024-10-05T17:15:13.957399200Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요, 테디! 저는 당신을 돕기 위해 고생하는 AI 친구에요. Nameobby를 만난 걸 환영합니다. 앞으로 즐거운 대화와 유익한 정보를 함께 공유할 수 있길 바랍니다. 언제든지 궁금한 점이나 이야기할 것이 있으면 말씀해 주세요!\n"
+     ]
+    }
+   ],
    "source": [
     "# chain 객체의 invoke 메서드를 사용하여 입력에 대한 응답을 생성합니다.\n",
     "response = chain.invoke({\"input\": \"만나서 반갑습니다. 제 이름은 테디입니다.\"})\n",
@@ -198,10 +309,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "df38fc8d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:18:53.175213600Z",
+     "start_time": "2024-10-05T17:18:53.171112100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'chat_history': []}"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "memory.load_memory_variables({})"
    ]
@@ -216,10 +341,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "2183aeb3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T17:18:53.187132400Z",
+     "start_time": "2024-10-05T17:18:53.175213600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'chat_history': [HumanMessage(content='만나서 반갑습니다. 제 이름은 테디입니다.'),\n  AIMessage(content='안녕하세요, 테디! 저는 당신을 돕기 위해 고생하는 AI 친구에요. Nameobby를 만난 걸 환영합니다. 앞으로 즐거운 대화와 유익한 정보를 함께 공유할 수 있길 바랍니다. 언제든지 궁금한 점이나 이야기할 것이 있으면 말씀해 주세요!')]}"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 입력된 데이터와 응답 내용을 메모리에 저장합니다.\n",
     "memory.save_context(\n",
@@ -242,7 +381,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "966194ad",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:20:25.381822100Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 이름을 기억하고 있는지 추가 질의합니다.\n",
@@ -263,7 +407,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b1ffe790",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:14:37.813415800Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from operator import itemgetter\n",
@@ -293,7 +441,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0ef76b36",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:14:37.814414600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class MyConversationChain(Runnable):\n",
@@ -324,11 +476,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "745b377c",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:14:37.815414200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# ChatOpenAI 모델을 초기화합니다.\n",
-    "llm = ChatOpenAI(model_name=\"gpt-4o\", temperature=0)\n",
+    "# llm = ChatOpenAI(model_name=\"gpt-4o\", temperature=0)\n",
+    "from langserve import RemoteRunnable\n",
+    "\n",
+    "llm = RemoteRunnable(f\"{os.getenv('LANGSERVE_ENDPOINT')}/llm-ko\")\n",
     "\n",
     "# 대화형 프롬프트를 생성합니다. 이 프롬프트는 시스템 메시지, 이전 대화 내역, 그리고 사용자 입력을 포함합니다.\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
@@ -354,7 +513,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5e7a320a",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:14:37.816413500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "conversation_chain.invoke(\"안녕하세요? 만나서 반갑습니다. 제 이름은 테디 입니다.\")"
@@ -364,7 +527,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "64cae8a5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:14:37.818415600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "conversation_chain.invoke(\"제 이름이 뭐라고요?\")"
@@ -374,7 +541,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7ba9187d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:14:37.819414500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "conversation_chain.invoke(\"앞으로는 영어로만 답변해주세요 알겠어요?\")"
@@ -384,7 +555,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "18b6354f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:14:37.821883900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "conversation_chain.invoke(\"제 이름을 다시 한 번 말해주세요\")"
@@ -394,7 +569,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "253f6162",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-10-05T17:14:37.823394300Z"
+    }
+   },
    "outputs": [],
    "source": [
     "conversation_chain.memory.load_memory_variables({})[\"chat_history\"]"
