--- a/05-Memory/05-ConversationKnowledgeGraph.ipynb
+++ b/05-Memory/05-ConversationKnowledgeGraph.ipynb
@@ -13,9 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T15:24:38.301506300Z",
+     "start_time": "2024-10-04T15:24:38.282285800Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -26,8 +40,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH05-Memory-kg2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
+    "# !pip install langchain-teddynote\n",
+    "from langchain_teddynote import logging\n",
+    "from langchain_teddynote.messages import stream_response\n",
+    "\n",
+    "# 프로젝트 이름을 입력합니다.\n",
+    "logging.langsmith(\"CH05-Memory-kg2\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-04T15:24:39.235234Z",
+     "start_time": "2024-10-04T15:24:39.223123500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T15:24:40.639885700Z",
+     "start_time": "2024-10-04T15:24:40.639885700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
@@ -36,8 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T14:22:56.977883300Z",
+     "start_time": "2024-10-04T14:22:54.899680500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "llm = ChatOpenAI(temperature=0)\n",
@@ -55,9 +110,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T14:19:02.040179700Z",
+     "start_time": "2024-10-04T14:19:01.306417500Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'history': [SystemMessage(content='On Pangyo: Pangyo has resident 김셜리씨.'),\n  SystemMessage(content='On 김셜리씨: 김셜리씨 is a 신입 디자이너. 김셜리씨 is in 우리 회사.')]}"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "memory.load_memory_variables({\"input\": \"김셜리씨는 누구입니까?\"})"
    ]
@@ -73,8 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T15:24:49.214845600Z",
+     "start_time": "2024-10-04T15:24:48.809058100Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain.prompts.prompt import PromptTemplate\n",
@@ -111,9 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T15:25:12.356230800Z",
+     "start_time": "2024-10-04T15:25:09.198860500Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\"Hello Teddy! It's nice to meet you. Shirley must be excited to be starting a new job as a designer at your company. I hope she's settling in well and getting to know everyone. If you need any tips on how to make her feel welcome or help her adjust to the new role, feel free to ask me!\""
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conversation_with_kg.predict(\n",
     "    input=\"My name is Teddy. Shirley is a coworker of mine, and she's a new designer at our company.\"\n",
@@ -129,13 +217,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T15:53:11.520862900Z",
+     "start_time": "2024-10-04T15:53:10.908322300Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'history': 'On Shirley: Shirley is a coworker. Shirley is a new designer. Shirley is at company.'}"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Shirley 에 대한 질문\n",
     "conversation_with_kg.memory.load_memory_variables({\"input\": \"who is Shirley?\"})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
