--- a/05-Memory/06-ConversationSummary.ipynb
+++ b/05-Memory/06-ConversationSummary.ipynb
@@ -26,9 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:26:32.528393700Z",
+     "start_time": "2024-10-04T16:26:32.512542500Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -39,8 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:26:34.029947900Z",
+     "start_time": "2024-10-04T16:26:32.528393700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain.memory import ConversationSummaryMemory\n",
@@ -59,8 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:27:00.537521300Z",
+     "start_time": "2024-10-04T16:26:34.462685900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "memory.save_context(\n",
@@ -120,9 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:27:05.916266800Z",
+     "start_time": "2024-10-04T16:27:05.904093600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SystemMessage(content=\"The human asks about the price of a European travel package. The AI responds that the basic price for a 14-night, 15-day European package is 3,500 euros, which includes airfare, hotel accommodations, and entrance fees to designated tourist sites. Additional costs depend on optional tours and personal expenses. The trip includes visits to major tourist attractions such as the Eiffel Tower in Paris, the Colosseum in Rome, the Brandenburg Gate in Berlin, and Rhine Falls in Zurich, offering a comprehensive experience of each city's iconic landmarks. The human inquires if travel insurance is included, and the AI confirms that basic travel insurance is provided for all travelers, covering medical expenses and emergency support, with options for enhanced coverage available. The human then asks if it is possible to upgrade to business class seats on the flight and what the cost would be. The AI confirms that an upgrade to business class is possible, with an additional cost of approximately 1,200 euros for a round trip, offering benefits such as wider seats, superior in-flight meals, and increased baggage allowance. The human asks about the hotel rating included in the package, and the AI states that the package includes accommodations in 4-star hotels, which offer comfort, convenience, and are centrally located for easy access to tourist sites, with excellent service and amenities. The human asks for more details about meal options, and the AI explains that the package includes daily breakfast at the hotel, while lunch and dinner are not included, allowing travelers to explore local cuisine. The AI also provides a list of recommended restaurants in each city to enhance the local dining experience. The human asks about the deposit and cancellation policy, and the AI explains that a deposit of 500 euros is required at booking. The cancellation policy allows for a full refund if canceled 30 days before the booking date, but the deposit is non-refundable if canceled after that. If canceled 14 days before the start of the trip, 50% of the cost is charged, and after that, the full cost is charged.\")]\n"
+     ]
+    }
+   ],
    "source": [
     "# 저장된 메모리 확인\n",
     "print(memory.load_memory_variables({})[\"history\"])"
@@ -148,8 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:28:54.878125400Z",
+     "start_time": "2024-10-04T16:28:54.480328Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
@@ -173,8 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:28:55.660825700Z",
+     "start_time": "2024-10-04T16:28:55.458849Z"
+    }
+   },
    "outputs": [],
    "source": [
     "memory.save_context(\n",
@@ -196,9 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:28:56.502647300Z",
+     "start_time": "2024-10-04T16:28:56.494133600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[HumanMessage(content='유럽 여행 패키지의 가격은 얼마인가요?'),\n AIMessage(content='유럽 14박 15일 패키지의 기본 가격은 3,500유로입니다. 이 가격에는 항공료, 호텔 숙박비, 지정된 관광지 입장료가 포함되어 있습니다. 추가 비용은 선택하신 옵션 투어나 개인 경비에 따라 달라집니다.')]"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 메모리에 저장된 대화내용 확인\n",
     "memory.load_memory_variables({})[\"history\"]"
@@ -213,8 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:29:08.485299100Z",
+     "start_time": "2024-10-04T16:28:59.102068200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "memory.save_context(\n",
@@ -254,13 +320,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:29:09.431553Z",
+     "start_time": "2024-10-04T16:29:09.385126Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[SystemMessage(content=\"The human asks about the price of a European travel package. The AI responds that the basic price for a 14-night, 15-day package is 3,500 euros, including airfare, hotel accommodations, and designated tourist site entrance fees. Additional costs vary depending on optional tours or personal expenses. The human asks about the main tourist sites to visit during the trip, and the AI lists famous landmarks such as the Eiffel Tower in Paris, the Colosseum in Rome, Brandenburg Gate in Berlin, and Lake Zurich in Zurich, offering a comprehensive experience of each city's iconic attractions. The human inquires about traveler's insurance, and the AI confirms that basic traveler's insurance is included for all travelers, providing coverage for medical expenses and emergency support. Additional insurance coverage options are available upon request. The human asks if it's possible to upgrade the flight seats to business class and inquires about the cost. The AI responds that upgrading to business class is possible at an additional cost of approximately 1,200 euros for a round trip. Business class offers benefits such as wider seats, premium inflight meals, and increased luggage allowance.\"),\n HumanMessage(content='패키지에 포함된 호텔의 등급은 어떻게 되나요?'),\n AIMessage(content='이 패키지에는 4성급 호텔 숙박이 포함되어 있습니다. 각 호텔은 편안함과 편의성을 제공하며, 중심지에 위치해 관광지와의 접근성이 좋습니다. 모든 호텔은 우수한 서비스와 편의 시설을 갖추고 있습니다.')]"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 메모리에 저장된 대화내용 확인\n",
     "memory.load_memory_variables({})[\"history\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
