--- a/05-Memory/09-Memory-using-SQLite.ipynb
+++ b/05-Memory/09-Memory-using-SQLite.ipynb
@@ -18,10 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6b9b1930",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T06:59:20.676637200Z",
+     "start_time": "2024-10-06T06:59:20.660955400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -46,9 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1559ba17",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T06:59:22.005314400Z",
+     "start_time": "2024-10-06T06:59:21.331815Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_community.chat_message_histories import SQLChatMessageHistory\n",
@@ -61,9 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "28a4c2f8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T06:59:22.139684700Z",
+     "start_time": "2024-10-06T06:59:22.125768900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 사용자 메시지를 추가합니다.\n",
@@ -84,10 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0ab596bb",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T06:59:23.206094200Z",
+     "start_time": "2024-10-06T06:59:23.195907300Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[HumanMessage(content='안녕? 만나서 반가워. 내 이름은 테디야. 나는 랭체인 개발자야. 앞으로 잘 부탁해!'),\n AIMessage(content='안녕 테디, 만나서 반가워. 나도 잘 부탁해!')]"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 채팅 메시지 기록의 메시지들\n",
     "chat_message_history.messages"
@@ -105,9 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6f7b9d9a",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T06:59:26.317721800Z",
+     "start_time": "2024-10-06T06:59:25.692160600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_core.prompts import (\n",
@@ -121,9 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3e67d5be",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T06:59:28.437658200Z",
+     "start_time": "2024-10-06T06:59:28.017571900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "prompt = ChatPromptTemplate.from_messages(\n",
@@ -150,9 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f976f3e6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T07:00:07.703347500Z",
+     "start_time": "2024-10-06T07:00:07.695084500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_chat_history(user_id, conversation_id):\n",
@@ -176,9 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cf962546",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T07:01:11.658502300Z",
+     "start_time": "2024-10-06T07:01:11.649618700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_core.runnables.utils import ConfigurableFieldSpec\n",
